<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tvLocation"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_location"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/weather_day_location" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_details_date"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            tools:text="@string/weather_day_details_date" />

        <TextView
            android:id="@+id/tvCurrentWeather"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_status"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            tools:text="@string/weather_day_status" />

        <TextView
            android:id="@+id/tvCurrentTemp"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_temp"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentWeather"
            tools:text="@string/weather_day_temp" />

        <TextView
            android:id="@+id/tvFeelsLike"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_feels_like"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentTemp"
            tools:text="@string/weather_day_feels_like" />

        <TextView
            android:id="@+id/tvMinTemp"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_temp_min"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFeelsLike"
            tools:text="@string/weather_day_temp_min" />

        <TextView
            android:id="@+id/tvMaxTemp"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_temp_max"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMinTemp"
            tools:text="@string/weather_day_temp_max" />

        <TextView
            android:id="@+id/tvPressure"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_pressure"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMaxTemp"
            tools:text="@string/weather_day_pressure" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_humidity"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPressure"
            tools:text="@string/weather_day_humidity" />

        <TextView
            android:id="@+id/tvSunrise"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_details_sunrise"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHumidity"
            tools:text="@string/weather_day_details_sunrise" />

        <TextView
            android:id="@+id/tvSunset"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_details_sunset"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSunrise"
            tools:text="@string/weather_day_details_sunset" />

        <TextView
            android:id="@+id/tvWindSpeed"
            style="@style/Widget.App.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_day_details_speed"
            android:textAppearance="?textAppearanceTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSunset"
            tools:text="@string/weather_day_details_speed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>