<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_size_normal">

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_location_edit_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1"
        android:maxLength="100"
        app:layout_constraintEnd_toStartOf="@id/btnLocationOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLocationOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_medium"
        android:text="@string/select_location_btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etLocation" />

    <TextView
        android:id="@+id/tvOr"
        style="@style/Widget.App.TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_location_tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnLocationOk" />

    <Button
        android:id="@+id/btnLocationGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_small"
        android:text="@string/select_location_btn_gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr" />

    <include
        android:id="@+id/loading_container"
        layout="@layout/progress_bar_and_error_label" />

</androidx.constraintlayout.widget.ConstraintLayout>